# sentinel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  render.yaml
configs/: devnet.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  SUBMISSION.md  demo-runbook.md  submission-answers.md  what-is-real.md
scripts/: deploy-vps.sh  full-demo.sh  restart-devnet-with-sentinel.sh  stage1-capture.sh
src/: channel_id.rs  ckb.rs  config.rs  detector.rs  domain.rs  error.rs  identity.rs  lib.rs  main.rs  metrics.rs
src/attest/: mod.rs
src/penalty/: ckb_executor.rs  decode_test.rs  message_format_test.rs  mod.rs  verify_test.rs  verify_test2.rs  witness.rs
src/rpc/: mod.rs  server.rs  types.rs
src/store/: mod.rs
src/watch/: mod.rs
web/: attestation.html  index.html
